--- a/Components/index.html
+++ b/Components/index.html
@@ -57,10 +57,10 @@
   <script>
   // ---------- Firebase config (web) ----------
   const FIREBASE_CONFIG = {
-    apiKey: "AIzaSyAuOmgyFoIoGtQPP3MvTU3aeQUY2xP7y2c",
+    apiKey: "Your Api Key",
     authDomain: "smartfarmbot-523a0.firebaseapp.com",
     // **FIXED: correct region 'asia-southeast1'**
-    databaseURL: "https://smartfarmbot-523a0-default-rtdb.asia-southeast1.firebasedatabase.app",
+    databaseURL: "Firebase data url",
     projectId: "smartfarmbot-523a0",
     storageBucket: "smartfarmbot-523a0.firebasestorage.app",
     messagingSenderId: "307503904804",
